新增关于我vo 新增实体类(@Table)依赖

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <!-- 启用 -->
             <optional>true</optional>
         </dependency>
+
+        <!-- @Table -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
